[tool.poetry]
name = "arcgishub"
version = "2.1.0"
description = "ArcGIS Hub Python API"
authors = ["Esri"]
license = "Proprietary License"
classifiers = [
    'Development Status :: 4',
    'Intended Audience :: Developers, Hub Customers',
    'License :: Other/Proprietary License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
keywords="gis geographic spatial hub arcgis initiatives"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
arcgis = "^1.8.4"
matplotlib = "^3.5.1"
pandas = "^1.4.2"
requests = "^2.27.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
